@@ -19,7 +19,7 @@ bool operator==(const wdiff& rdf, const wdiff& ldf)
 	return ((rdf.start[0] == ldf.start[0]) &&
 		    (rdf.end[0] == ldf.end[0]) &&
 			(rdf.start[1] == ldf.start[1]) &&
-			(rdf.start[1] == ldf.start[1]));
+			(rdf.end[1] == ldf.end[1]));
 }
 
 /** @brief Testcase initialization code. */
@@ -50,7 +50,7 @@ void DiffColoring::OneWord()
 		&diffs);
 	count = diffs.GetSize();
 	CPPUNIT_ASSERT(count == 1);
-	CPPUNIT_ASSERT(diffs[0] == wdiff(0, 3, 0, 3));
+	CPPUNIT_ASSERT(diffs[0] == wdiff(0, 3, 0, 4));
 }
 
 /**
@@ -70,6 +70,25 @@ void DiffColoring::OneDiff()
 	count = diffs.GetSize();
 	CPPUNIT_ASSERT(count == 1);
 	CPPUNIT_ASSERT(diffs[0] == wdiff(8, 21, 8, 16));
+}
+
+/**
+* @brief Test word difference in the middle of the line.
+*/
+void DiffColoring::OneWordDiff()
+{
+	wdiffarray diffs;
+	CString string1(_T("This is the first line"));
+	CString string2(_T("This is the last line"));
+	int count = 0;
+
+	// Compare case, all white spaces, whitespace break
+	sd_ComputeWordDiffs(string1, string2,
+		true, WHITESPACE_COMPARE_ALL, 0, false,
+		&diffs);
+	count = diffs.GetSize();
+	CPPUNIT_ASSERT(count == 1);
+	CPPUNIT_ASSERT(diffs[0] == wdiff(12, 16, 12, 15));
 }
 
 /**
@@ -131,6 +150,62 @@ void DiffColoring::Bug1491334()
 }
 
 /**
+* @brief Test punctuation break mode at char level.
+*/
+void DiffColoring::PunctuationChar()
+{
+	wdiffarray diffs;
+	CString string1(_T("00,52,C8,52"));
+	CString string2(_T("00,00,00,52"));
+	int count = 0;
+
+	// Compare case, all white spaces, whitespace break, char level
+	sd_ComputeWordDiffs(string1, string2,
+		true, WHITESPACE_COMPARE_ALL, 0, true,
+		&diffs);
+	count = diffs.GetSize();
+	CPPUNIT_ASSERT(count == 1);
+	CPPUNIT_ASSERT(diffs[0] == wdiff(3, 7, 3, 7));
+
+	// Compare case, all white spaces, whitespace break + punctuation, char level
+	diffs.RemoveAll();
+	sd_ComputeWordDiffs(string1, string2,
+		true, WHITESPACE_COMPARE_ALL, 1, true,
+		&diffs);
+	count = diffs.GetSize();
+	CPPUNIT_ASSERT(count == 1);
+	CPPUNIT_ASSERT(diffs[0] == wdiff(3, 7, 3, 7));
+};
+
+/**
+* @brief Test punctuation break mode at word level.
+*/
+void DiffColoring::PunctuationWord()
+{
+	wdiffarray diffs;
+	CString string1(_T("00,52,C8,52"));
+	CString string2(_T("00,00,00,52"));
+	int count = 0;
+
+	// Compare case, all white spaces, whitespace break
+	sd_ComputeWordDiffs(string1, string2,
+		true, WHITESPACE_COMPARE_ALL, 0, false,
+		&diffs);
+	count = diffs.GetSize();
+	CPPUNIT_ASSERT(count == 1);
+	CPPUNIT_ASSERT(diffs[0] == wdiff(0, 10, 0, 10));
+
+	// Compare case, all white spaces, whitespace break + punctuation
+	diffs.RemoveAll();
+	sd_ComputeWordDiffs(string1, string2,
+		true, WHITESPACE_COMPARE_ALL, 1, false,
+		&diffs);
+	count = diffs.GetSize();
+	CPPUNIT_ASSERT(count == 1);
+	CPPUNIT_ASSERT(diffs[0] == wdiff(3, 7, 3, 7));
+};
+
+/**
 * @brief Bug #1639453: Imaginary difference highlighted in character level mode.
 */
 void DiffColoring::Bug1639453()
@@ -146,7 +221,20 @@ void DiffColoring::Bug1639453()
 		&diffs);
 	count = diffs.GetSize();
 	CPPUNIT_ASSERT(count == 1);
-	CPPUNIT_ASSERT(diffs[0] == wdiff(7, 7, 7, 11));
+	CPPUNIT_ASSERT(diffs[0] == wdiff(7, 6, 7, 10));
+
+	// A more complex strings.
+	string1 = _T("[overlay_oid_origin, overlay_oid_target], [nil, nil]");
+	string2 = _T("[overlay_oid_origin, overlay_oid_target, origin_file_name, target_file_name], [nil, nil, \"origin.txt\", \"target.txt\"]");
+
+	// Compare case, all white spaces, whitespace break + punctuation, char level
+	diffs.RemoveAll();
+	sd_ComputeWordDiffs(string1, string2,
+		true, WHITESPACE_COMPARE_ALL, 1, true,
+		&diffs);
+	count = diffs.GetSize();
+	CPPUNIT_ASSERT(count == 1);
+	CPPUNIT_ASSERT(diffs[0] == wdiff(39, 50, 39, 114));
 }
 
 /**
